2013-02-01  Manuel Rego Casasnovas  <rego@igalia.com>

        [GTK][WK2] MiniBrowser fullscreen signals support
        https://bugs.webkit.org/show_bug.cgi?id=108005

        Reviewed by Carlos Garcia Campos.

        Shows a label for 2 seconds using overlay (if GTK >= 3.2.0) and hides
        the toolbar when entering fullscreen. When leaving fullscreen the
        label is hidden (if it's not hidden yet) and the toolbar is shown again.

        * MiniBrowser/gtk/BrowserWindow.c:
        (_BrowserWindow):
        (fullScreenMessageTimeoutCallback):
        (webViewEnterFullScreen):
        (webViewLeaveFullScreen):
        (browserWindowFinalize):
        (browserWindowConstructed):

2013-02-01  Alexis Menard  <alexis@webkit.org>

        Enable unprefixed CSS transitions by default.
        https://bugs.webkit.org/show_bug.cgi?id=108216

        Reviewed by Dean Jackson.

        Rename the flag CSS_TRANSFORMS_ANIMATIONS_TRANSITIONS_UNPREFIXED
        to CSS_TRANSFORMS_ANIMATIONS_UNPREFIXED which will be used later to 
        guard the unprefixing work for CSS Transforms and animations.

        * Scripts/webkitperl/FeatureList.pm:
        * qmake/mkspecs/features/features.pri:

2013-01-31  David Farler  <dfarler@apple.com>

        Provide a sensible default architecture when building on iOS SDKs
        https://bugs.webkit.org/show_bug.cgi?id=108395

        Reviewed by Anders Carlsson.

        * Scripts/webkitdirs.pm:
        (determineArchitecture): Anchor SDK regex matches at the beginning.

2013-01-31  Ryosuke Niwa  <rniwa@webkit.org>

        buildbot should not rely on webkitpy
        https://bugs.webkit.org/show_bug.cgi?id=107379

        Reviewed by Eric Seidel.

        Move all Python files used in buildbot configuration into BuildSlaveSupport directory.
        Once this patch is landed, we can stop restarting the master on webkitpy changes.

        * BuildSlaveSupport/build.webkit.org-config/committer_auth.py: