@@ -1,5 +1,5 @@
 application: webkit-commit-queue
-version: 108427 # Bugzilla bug ID of last major change
+version: 108621 # Bugzilla bug ID of last major change
 runtime: python
 api_version: 1
 
